Changing from database/sql to go-pg
