# docs/swagger.yaml
@@ -151,6 +151,28 @@ paths:
       summary: Find All CharityMrys
       tags:
       - CharityMrys
+  /v1/charity-mrys/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.CharityMrys'
+      security:
+      - ApiKeyAuth: []
+      summary: Find One Charity Mrys By ID
+      tags:
+      - CharityMrys
 securityDefinitions:
   ApiKeyAuth:
     in: header
