# infrastructure/router/gorilla_mux.go
@@ -116,6 +116,7 @@ func (g gorillaMux) setAppHandlers(router *mux.Router) {
 	api.Handle("/accounts", g.buildFindAllAccountAction()).Methods(http.MethodGet)
 
 	api.Handle("/charity-mrys", g.buildFindAllCharityMrysAction()).Methods(http.MethodGet)
+	api.Handle("/charity-mrys/{id}", g.buildFindCharityMrysAction()).Methods(http.MethodGet)
 
 	api.HandleFunc("/health", action.HealthCheck).Methods(http.MethodGet)
 }
@@ -203,6 +204,37 @@ func (g gorillaMux) buildFindAllAccountAction() *negroni.Negroni {
 func (g gorillaMux) buildFindAllCharityMrysAction() *negroni.Negroni {
 	var handler http.HandlerFunc = func(res http.ResponseWriter, req *http.Request) {
 		var act = route.CharityMrysFindAll(g.db, g.log, g.ctxTimeout)
+		act.Execute(res, req)
+	}
+
+	return negroni.New(
+		negroni.HandlerFunc(middleware.NewLogger(g.log).Execute),
+		negroni.NewRecovery(),
+		negroni.Wrap(handler),
+	)
+}
+
+// FindCharityMrys godoc
+// @Summary Find One Charity Mrys By ID
+// @Tags CharityMrys
+// @Security ApiKeyAuth
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} domain.CharityMrys
+// @Param id path string true "ID"
+// @Router /v1/charity-mrys/{id} [get]
+func (g gorillaMux) buildFindCharityMrysAction() *negroni.Negroni {
+	var handler http.HandlerFunc = func(res http.ResponseWriter, req *http.Request) {
+		var act = route.CharityMrysFindOne(g.db, g.log, g.ctxTimeout)
+
+		var (
+			vars = mux.Vars(req)
+			q    = req.URL.Query()
+		)
+
+		q.Add("id", vars["id"])
+		req.URL.RawQuery = q.Encode()
+
 		act.Execute(res, req)
 	}
 
